--- a/style/style.css
+++ b/style/style.css
@@ -83,9 +83,9 @@ a{
 /*== main ==*/
 #main{
 	margin-top: 50px;
-	width: 80%;
+	width: 90%;
 	background-color: #EEEEEE;
-	margin-left: 10%;
+	margin-left: 5%;
 }
 
 /*== sub ==*/
@@ -100,4 +100,18 @@ a{
 
 /*== flexslider ==*/
 
+
+/*== headerDojoLogo ==*/
+
+.headerLogo{
+	top: 100px;
+	width: 10%;
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+}
+
+.aboutCoderDojo{
+	margin-top: 20px;
+}
 
