--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,7 @@
 body{
 	font-family: "HelveticaNeue-UltraLight";
+	width: 100%
+	height: 100%;
 	min-width: 70%;
 }
 
@@ -54,6 +56,12 @@ a{
 
 }
 
+.homeLogo{
+	width: 15%;
+	height: auto;
+	margin-left: 50px;
+}
+
 
 
 /*== pタグ周り ==*/
@@ -83,14 +91,11 @@ a{
 /*== main ==*/
 #main{
 	margin-top: 50px;
-<<<<<<< HEAD
+
 	width: 80%;
-	margin-left: 10%;
-=======
-	width: 90%;
 	background-color: #EEEEEE;
-	margin-left: 5%;
->>>>>>> e0b6c4f9f3ccea824ec68dfb8a6b201de8e9fb0b
+	margin-left: 10%;
+
 }
 
 .topImg{
@@ -102,6 +107,7 @@ a{
 #sub{
 	width: 100%;
 	height: auto;
+	margin-left: 5.5%;
 }
 
 .subImg{
