--- a/style/style.css
+++ b/style/style.css
@@ -33,6 +33,7 @@ a{
 }
 
 #menu ul{
+	top: 7px;
 	width: 100%;
 	height: 15px;
 	left: 6%;
@@ -44,7 +45,6 @@ a{
 }
 
 #menu li{
-	top: 7px;
 	padding: 0;
 	margin: 0;
 	float: left;
@@ -88,7 +88,7 @@ a{
 	text-align: center;
 }
 
-/*== conteiner ==*/
+/*== 共通容器 ==*/
 #conteiner{
 	margin-top: 50px;
 	width: 80%;
@@ -96,29 +96,41 @@ a{
 	margin-left: 10%;
 }
 
-/*== topImg ==*/
+/*== index ==*/
+#contents{
+	width: 100%;
+	height: 2000px;
+
+}
 .topImg{
 	width: 100%;
 	height: auto;
 }
 
-/*== sub ==*/
 #sub{
+	height: 300px;
+	background-color: #5f4;
+	border-top: 5px solid #fff;
+	
+
+}
+
+#sub ul{
 	width: 100%;
-	height: auto;
-	margin-left: 5.5%;
+	margin: 0;
+	padding: 0;
+	margin-left: -40px;
 }
 
-.subImg{
-	margin: 0px;
+#sub li{
 	border-right: 2px solid #fff;
+	list-style-type: none;
 	float: left;
-	list-style: none;
+	display: block;
 }
 
-/*== flexslider ==*/
-
-
+#sub img{
+}
 /*== about ==*/
 
 .headerLogo{
@@ -135,7 +147,9 @@ a{
 
 #about{
 	width: 90%;
+	height: 2000px;
 	margin: 5%;
+	background-color: #EEEEEE;
 }
 
 .headline{
@@ -155,7 +169,9 @@ a{
 /*== footer ==*/
 #footer{
 	width: 80%;
+	height: 100px;
 	margin-left: 10%;
+	position: absolute;
 }
 
 #footer img{
