--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,7 @@ body{
 	font-family: "HelveticaNeue-UltraLight";
 	width: 100%
 	height: 100%;
-	min-width: 70%;
+	min-width: 990px;
 }
 
 a{
@@ -20,6 +20,7 @@ a{
 	padding: 0;
 	position: fixed;
 	width: 100%;
+	min-width: 990px;
 	background-color: #1E90FF;
 	opacity: 0.95;
 	z-index: 100;
@@ -58,65 +59,6 @@ a{
 .homeLogo{
 	width: 35px;
 	height: auto;
-}
-
-@media only screen and (max-width: 480px){
-	#menu {
-		width: 25%;
-		border-bottom: 1px solid #1f57ff;
-	}
-
-	#menu li{
-		width: 100%;
-	}
-
-
-#toggle{
-	display: block;
-	position: relative;
-	width: 100%;
-	background-color: #1E90FF;
-}
-
-#toggle a{
-	display: block;
-	position: relative;
-	padding: 0 auto;
-	border-bottom: 1px solid #1f57ff;
-  	color: #fff;
-  	text-align: center;
-  text-decoration: none;
-}
-
-
-#toggle:before{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 20px;
-    margin-top: -10px;
-    background: #fff;
-  }
-
-  #toggle a:before, #toggle a:after{
-    display: block;
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 10px;
-    width: 20px;
-    height: 4px;
-    background: #222;
-  }
-  #toggle a:before{
-    margin-top: -6px;
-  }
-  #toggle a:after{
-    margin-top: 2px;
-  }
 }
 
 /*== pタグ周り ==*/
@@ -227,14 +169,16 @@ a{
 .imageFloatLeft{
 	float: left;
 	padding-right: 10px;
-
 }
 
 /*== footer ==*/
 #footer{
+	margin: 0;
+	padding: 0;
 	width: 80%;
-	height: 100px;
-	margin-left: 10%;
+	min-width: 990px;
+	margin-left: auto;
+	margin-right: auto;
 	position: absolute;
 }
 
@@ -248,12 +192,38 @@ a{
 }
 
 #footerLinks{
-	margin-left: 500px;
-	text-align: left;
+	float: left;
+	margin-left: 1%;
 }
 
+#footerLinks ul{
+	list-style: none;
+}
 
+#footerLinks h1{
+	font-size: 18px;
+	margin: 0;
+	padding: 0;
+	margin-bottom: 0.5%;
+}
+
+#footerLinks a{
+	font-size: 15px;
+}
+
+.linksLeft{
+	float: left;
+}
+
+.linksRight{
+	float: left;
+}
 
 .fb-page{
+	margin: 0;
+	padding: 0;
+	margin-left: 14%;
+	float: left;
+	width: 300px;
 
 }
