--- a/style/style.css
+++ b/style/style.css
@@ -257,3 +257,19 @@ a{
 .fb-page{
 
 }
+
+
+/*== table ==*/
+
+table{
+	width: 80%;
+	text-align: center;
+}
+
+.tdL{
+	width: 30%;
+}
+
+.tdR{
+	width: 30%;
+}
