--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body{
-	font-family: "HelveticaNeue-UltraLight";
+	font-family: 'HelveticaNeue-UltraLight';
 	width: 100%
 	height: 100%;
 	min-width: 990px;
@@ -9,6 +9,22 @@ a{
 	color: #1E90FF;
 	text-decoration: none;
 }
+
+.clearfix:after {
+content: ".";
+display: block;
+height: 0;
+clear: both;
+visibility: hidden;
+}
+
+/*== float解除 ==*/
+.clearfix {display: inline-table;}
+
+/* Hides from IE-mac \*/
+* html .clearfix {height: 1%;}
+.clearfix {display: block;}
+/* End hide from IE-mac */
 
 
 /*== MENU ==*/
@@ -30,7 +46,7 @@ a{
 	text-decoration: none;
 	color: white;
 	font-size: 20px;
-	font-family: HelveticaNeue-UltraLight;
+	font-family: 'HelveticaNeue-UltraLight';
 	font-weight: 100px;
 }
 
@@ -64,7 +80,7 @@ a{
 /*== pタグ周り ==*/
 .title{
 	font-size: 30px;
-	font-family: HelveticaNeue-UltraLight;
+	font-family: 'HelveticaNeue-UltraLight';
 	line-height: 1.5em;
 }
 
@@ -77,7 +93,7 @@ a{
 .text{
 	text-align: left;
 	font-size: 18px;
-	font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ',Meiryo,'ＭＳ Ｐゴシック',sans-serif;
+	font-family: 'ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
 }
 
 #title{
@@ -216,50 +232,78 @@ a{
 	position: absolute;
 }
 
-#footer img{
-	width: 8%;
-	margin: 20px;
-}
-
-#footerImages{
-	float: left;
-}
-
 #footerLinks{
-	float: left;
-	margin-left: 1%;
+	margin: 0;
+	padding: 0;
 }
 
 #footerLinks ul{
 	list-style: none;
 }
 
-#footerLinks h1{
-	font-size: 18px;
-	margin: 0;
-	padding: 0;
-	margin-bottom: 0.5%;
-}
-
 #footerLinks li{
 	margin: 0.5% 0; 
 	margin-left: 10px;
+	background-color: #dd2;
+}
+
+#footerLinks h1{
+	margin: 0;
+	padding: 0;
+	font-size: 18px;
+	margin-bottom: 0.5%;
+	background-color: #ffb;
+}
+
+#footer-contents{
+	width: 65%;
+	margin: 0 auto;
+	padding: 0 2%;
 }
 
 .linksLeft{
 	float: left;
+	background-color: #aff;
 }
 
 .linksRight{
 	float: left;
+	background-color: #faf;
+}
+
+#mere{
+	margin: 1% 0;
+}
+
+#copyright{
+	font-size: 12px;
+	margin-right: 1.5%;
+	float: left;
+}
+
+#aux{
+	background-color: #dfd;
+	font-size: 10px;
+	width: 300px;
+	float: left;
+}
+
+.aux-contents{
+	border-right: 1px solid #ddd;
+	margin-right: 0.5%;
+}
+
+.aux-contents:last-child{
+	border: none;
+	margin: 0;
+	padding: 0;
 }
 
 .fb-page{
 	margin: 0;
 	padding: 0;
-	margin-left: 10%;
-	float: left;
 	width: 300px;
+	float: left;
 
 }
 
