--- a/style/style.css
+++ b/style/style.css
@@ -2,7 +2,6 @@ body{
 	font-family: 'HelveticaNeue-UltraLight';
 	width: 100%
 	height: 100%;
-	min-width: 990px;
 }
 
 a{
@@ -36,7 +35,6 @@ visibility: hidden;
 	padding: 0;
 	position: fixed;
 	width: 100%;
-	min-width: 990px;
 	background-color: #1E90FF;
 	opacity: 0.95;
 	z-index: 100;
@@ -109,6 +107,36 @@ visibility: hidden;
 	width: 80%;
 }
 
+/*== 共通要素 ==*/
+#pageTitle{
+	margin-top: 50px;
+}
+
+.headerLogo{
+	top: 100px;
+	width: 10%;
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+	padding-top: 2%;
+}
+
+.headline{
+	margin: 0;
+	padding: 0;
+	text-align: center;
+}
+
+.individual{
+	margin-left: 3%;
+	margin-right: 1%;
+}
+
+.title-of-top{
+	margin-top: 5%;
+	padding-top: 1%;
+}
+
 /*== index ==*/
 #contents{
 	width: 100%;
@@ -150,36 +178,13 @@ visibility: hidden;
 	background-color: #EEEEEE;
 }
 
-.headerLogo{
-	top: 100px;
-	width: 10%;
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-}
-
-.individual{
-	margin-left: 3%;
-}
 .aboutCoderDojo{
-	margin-top: 5%;
 }
 
 .aboutCoderDojoJapan{
-
 }
 
 .aboutCDK{
-	margin-right: 1%;
-}
-
-
-.headline{
-	text-align: center;
-}
-
-#pageTitle{
-	padding-top: 50px;
 }
 
 .imageFloatLeft{
@@ -193,43 +198,54 @@ visibility: hidden;
 	background-color: #EEEEEE;
 }
 
-.headerLogo{
-	top: 100px;
-	width: 10%;
-	display: block;
-	text-align: center;
-	margin: 0 auto;
-}
-
-.individual{
-	margin-left: 3%;
-}
 .aboutRTD{
 	margin-top: 5%;
 }
 
-.headline{
+
+/*== event ==*/
+
+#event{
+	min-width: 
+}
+
+.past-events{
+
+}
+
+.event-list{
+}
+
+.eventImg{
+	width: 60%;
+	margin: 0 auto;
+	display: block;
+}
+
+.mainArticle{
+	width: 50%;
+	margin-bottom: 10%;
+	float: left;
+}
+
+.eventText{
 	text-align: center;
 }
-
-#pageTitle{
-	padding-top: 50px;
-}
-
-.imageFloatLeft{
-	float: left;
-	padding-right: 10px;
-}
-
 /*== footer ==*/
 #footer{
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	min-width: 990px;
+	min-width: 1000px
 	margin-left: auto;
 	margin-right: auto;
 	position: absolute;
+	background-color: rgba(30,144,255,0.5);
+	color: white;
+}
+
+#footer a{
+	color: white;
 }
 
 #footerLinks{
@@ -243,8 +259,7 @@ visibility: hidden;
 
 #footerLinks li{
 	margin: 0.5% 0; 
-	margin-left: 10px;
-	background-color: #dd2;
+	margin-left: 5%;
 }
 
 #footerLinks h1{
@@ -252,7 +267,6 @@ visibility: hidden;
 	padding: 0;
 	font-size: 18px;
 	margin-bottom: 0.5%;
-	background-color: #ffb;
 }
 
 #footer-contents{
@@ -261,42 +275,53 @@ visibility: hidden;
 	padding: 0 2%;
 }
 
+.footerNav{
+	margin: 0;
+	padding: 0;
+	background-color:#aaa;
+}
+
 .linksLeft{
+	width: 330px;
 	float: left;
-	background-color: #aff;
+	margin-left: 3%;
 }
 
 .linksRight{
 	float: left;
-	background-color: #faf;
+	margin-left: 3%;
 }
 
 #mere{
 	margin: 1% 0;
+	margin-left: 2%;
 }
 
 #copyright{
 	font-size: 12px;
-	margin-right: 1.5%;
+	margin-right: 3%;
 	float: left;
+	background-color: #222;
 }
 
 #aux{
-	background-color: #dfd;
+	padding: 1.2% 0;
 	font-size: 10px;
 	width: 300px;
 	float: left;
+	background-color: #444;
 }
 
 .aux-contents{
-	border-right: 1px solid #ddd;
-	margin-right: 0.5%;
+	border-right: 1px solid #fff;
+	padding: 0 3%;
+	margin-left: 0 3%;
 }
 
 .aux-contents:last-child{
 	border: none;
 	margin: 0;
-	padding: 0;
+	padding: 0 3%;
 }
 
 .fb-page{
