--- a/style/style.css
+++ b/style/style.css
@@ -243,21 +243,56 @@ visibility: hidden;
 	width: 150px;
 }
 
-.montorProfile{
+.mentorProfile{
 	width: 300px;
+	height: 150px;
 	float: right;
 }
 
 .name{
+	margin: 0;
+	margin-top: 5%;
+	margin-left: 1%;
 	font-size: 23px;
-	padding-bottom: 2%;
+}
+
+.en{
+	margin: 0;
+	margin-left: 3%;
+	margin-bottom: 5%;
+	font-size: 12px;
 }
 
 .skil{
-	font-size: 15px;
+	font-size: 13px;
+	display: inline-block;
+	background-color: rgba(30,144,255,0.4);
+	border-radius: 4px;
+	margin: 0 1%;
+	padding: 0.8% 1.5%;
+}
+
+.Scratch{
+	background-color: rgba(255,104,8,0.5);
+}
+
+.Swift{
+	background-color: rgba(255, 104, 8,1);
+}
+
+.Java{
+	background-color: rgba(255, 255, 0, 0.7);
+}
+
+.PHP{
+	background-color: rgba(86, 133, 196, 1);
+}
+.Web{
+	background-color: rgba(35,255,7,0.5);
 }
 
 .belonging{
+	margin-left: 1%;
 	font-size: 15px;
 }
 
