--- a/style/style.css
+++ b/style/style.css
@@ -55,11 +55,10 @@ visibility: hidden;
 	top: 7px;
 	width: 100%;
 	height: 15px;
-	left: 6%;
 	text-align: center;
 	list-style-type: none;
 	position: relative;
-	margin: 0;
+	margin: 0 5%;
 	padding: 0;
 }
 
@@ -110,6 +109,12 @@ visibility: hidden;
 	width: 80%;
 }
 
+#container-plus{
+	margin-left: auto;
+	margin-right: auto;
+	margin-top: 50px;
+	width: 100%;
+}
 /*== 共通要素 ==*/
 #pageTitle{
 	margin-top: 50px;
@@ -147,13 +152,15 @@ visibility: hidden;
 }
 
 .topImg{
+	margin: 0;
+	padding: 0;
 	width: 100%;
 	height: auto;
 	border-bottom: 10px solid #fff;
 }
 
 #sub{
-	margin: 0;
+	margin: 1% 0;
 	padding: 0;
 }
 
@@ -210,66 +217,78 @@ visibility: hidden;
 /*== mentor ==*/
 
 #mentor{
+
 }
 
 .mentor-list{
-	margin: 0 10%;
-}
-
-.mentorListUL{
-	margin: 0;
-	padding: 0;
-	list-style: none;
+	margin: 5% 10%;
+	padding-left: 2%;
 }
 
 .mentorList-L{
-	width: 50%;
+	width: 430px;
 	float: left;
 }
 
 .mentorList-R{
-	width: 50%;
+	width: 430px;
 	float: left;
 }
 
+.mentorListUL{
+	margin: 0 5%;
+	padding: 0;
+	list-style: none;
+
+}
+
 .mentorListLI{
-	margin: 10% 0;
-	margin-left: 3%;
+	margin: 10px 0;
+	height: 151px;
+	margin-bottom: 5%;
+	border-radius: 15px;
 	background-color: rgba(230,230,230,0.6);
-	border-radius: 20px;
+
 }
 
 .mentorImg{
+	margin: 0;
+	padding: 0;
+	width: 150px;
 	border-radius: 50%;
-	width: 35%;
+	float: left;
+
 }
 
 .mentorProfile{
-	width: 60%;
-	float: right;
+	margin-top: 5%;
+	margin-left: 5%;
+	width: 55%;
+	float: left;
+
 }
 
 .name{
 	margin: 0;
-	margin-top: 5%;
-	margin-left: 1%;
-	font-size: 23px;
+	padding: 0;
+	font-size: 22px;
+	/*background-color: red;*/
 }
 
 .en{
 	margin: 0;
-	margin-left: 3%;
-	margin-bottom: 5%;
-	font-size: 12px;
+	padding: 0;
+	font-size: 14px;
+	/*background-color: blue;*/
 }
 
 .skil{
-	font-size: 13px;
-	display: inline-block;
+	margin-right: 5px;
+	padding: 1px 5px;
+	font-size: 12px;
 	background-color: rgba(30,144,255,0.4);
-	border-radius: 4px;
-	margin: 0 1%;
-	padding: 0.8% 1.5%;
+	border-radius: 5px;
+	display: inline-block;
 }
 
 .Scratch{
@@ -292,8 +311,9 @@ visibility: hidden;
 }
 
 .belonging{
-	margin-left: 1%;
-	font-size: 15px;
+	margin: 0;
+	padding: 0;
+	/*background-color: yellow;*/
 }
 
 /*== event ==*/
@@ -388,47 +408,89 @@ visibility: hidden;
 }
 
 .linksRight{
+	width: 210px;
 	float: left;
 	margin-left: 3%;
 }
 
 #mere{
 	height: 100px;
+	text-align: right;
 }
 
 #copyright{
-	font-size: 12px;
-	margin-right: 3%;
-	float: left;
+	font-size: 11px;
 }
 
 #aux{
-	padding: 25px 0;
-	font-size: 10px;
-	width: 300px;
-	float: left;
+	font-size: 8px;
 }
 
 .aux-contents{
 	border-right: 1px solid #fff;
-	padding: 0 3%;
-	margin-left: 0 3%;
+	padding: 0 1%;
+	margin-left: 0 1%;
 }
 
 .aux-contents:last-child{
 	border: none;
-	margin: 0;
-	padding: 0 3%;
 }
 
 .fb-page{
 	margin: 0;
+	margin-top: 1%;
 	padding: 0;
 	width: 300px;
 	float: left;
 
 }
 
+/*== sponsor ==*/
+
+#sponsor{
+}
+
+.sponsor-list{
+	margin: 2% 10%;
+}
+
+.sponsorListUL{
+	margin: 10px auto;
+	padding: 0;
+	width: 500px;
+	list-style: none;
+	text-align: center;
+}
+
+.sponsorListLI{
+	margin: 15px 0;
+	border-radius: 15px;
+	background-color: rgba(140,140,140,0.4);
+
+}
+
+.sponsorImg{
+	margin-top: 1%;
+	width: 200px;
+}
+
+.sponsorProfile{
+	margin: 0;
+}
+
+.name{
+	margin: 0;
+	font-size: 22px;
+}
+
+.type{
+	margin: 0;
+	padding: 0 1%;
+	font-size: 12px;
+	background-color: rgba(30,144,255,0.4);
+	border-radius: 5px;
+	display: inline-block;
+}
 
 /*== table ==*/
 
