--- a/style/style.css
+++ b/style/style.css
@@ -39,6 +39,7 @@ visibility: hidden;
 	padding: 0;
 	position: fixed;
 	width: 100%;
+	min-width: 1395px;
 	background-color: #1E90FF;
 	opacity: 0.95;
 	z-index: 100;
