--- a/style/flexslider.css
+++ b/style/flexslider.css
@@ -43,14 +43,16 @@
 .flexslider {
   margin: 0;
   padding: 0;
+
 }
 .flexslider .slides > li {
   display: none;
   -webkit-backface-visibility: hidden;
 }
 .flexslider .slides img {
-  width: 100%;
+  width: 75%;
   display: block;
+  margin: 0 auto;
 }
 .flexslider .slides:after {
   content: "\0020";
