--- a/style/style.css
+++ b/style/style.css
@@ -148,6 +148,15 @@ visibility: hidden;
 	padding-top: 1%;
 }
 
+.formTitle{
+	text-align: left;
+	font-size: 20px;
+}
+
+.submit{
+	margin-bottom: 1%;
+	padding-bottom: 1%;
+}
 /*== index ==*/
 #contents{
 	width: 100%;
@@ -163,7 +172,7 @@ visibility: hidden;
 	left: 0;
 	width: 100%;
 	position: absolute;
-	background-color: rgba(10,10,10,0.2);
+	text-align: center;
 }
 
 .head{
@@ -173,42 +182,38 @@ visibility: hidden;
 
 .comment{
 	margin: 0;
-	font-size: 1em
+	font-size: 1em;
 }
 
 .head001{
 	margin: 1% 0;
-	margin-left: 15%;
 }
 
 .comment001{
-	margin-top: 1%;
-	margin-left: 15%;
 }
 
 .head002{
-
+	margin: 1% 0;
+	margin-top: 3zzz%;
 }
 
 .comment002{
-
 }
 
 .head003{
-
+	margin: 1% 0;
+	margin-top: 3%;
 }
 
 .comment003{
-
 }
 
 .head004{
-	margin-top: 3%;
-	text-align: center;
+	margin: 1% 0;
+	margin-top: 4%;
 }
 
 .comment004{
-	text-align: center;
 }
 
 #sub{
@@ -253,6 +258,26 @@ visibility: hidden;
 .imageFloatLeft{
 	float: left;
 	padding-right: 10px;
+}
+/*== join ==*/
+#join{
+	width: 100%;
+	border-radius: 20px;
+	background-color: #EEEEEE;
+}
+
+.formfix{
+	margin-top: 10%;
+}
+
+.formAttention{
+	font-size: 12px;
+	color: red;
+	text-align: center;
+}
+
+.formTitle{
+
 }
 /*== rtd ==*/
 
