--- a/style/style.css
+++ b/style/style.css
@@ -138,6 +138,10 @@ visibility: hidden;
 	text-align: center;
 }
 
+.nonImg{
+	margin-top: 10%;
+}
+
 .individual{
 	margin-left: 3%;
 	margin-right: 1%;
@@ -264,10 +268,6 @@ visibility: hidden;
 	width: 100%;
 	border-radius: 20px;
 	background-color: #EEEEEE;
-}
-
-.formfix{
-	margin-top: 10%;
 }
 
 .formAttention{
