--- a/style/style.css
+++ b/style/style.css
@@ -228,14 +228,15 @@ visibility: hidden;
 
 .subContents{
 	display: flex;
+	justify-content: center;
 }
 
 .subContents div{
-	text-align: center;
+	padding: 1%;
+	
 }
 
 #sub img{
-	width: 75%;
 }
 /*== about ==*/
 #about{
@@ -478,6 +479,7 @@ visibility: hidden;
 }
 
 .party{
+
 	margin: 5% 0;
 }
 
@@ -519,10 +521,18 @@ visibility: hidden;
 }
 
 .eventText{
-	margin: 0;
-	padding: 0;
+	margin: 0 auto;
+	padding: 0 0 1% 0;
+	width: 80%;
+	background-color: #EEEEEE;
+	border-radius: 20px;
 	text-align: center;
 }
+
+.lastest{
+	width: 50%;
+}
+
 
 .readMore{
 
@@ -752,6 +762,7 @@ visibility: hidden;
 	margin: 0;
 	padding: 0;
 	font-size: 1.2em;
+	font-weight: bold;
 }
 
 .founderProfile{
