--- a/style/formStyle.css
+++ b/style/formStyle.css
@@ -10,4 +10,21 @@
 }
 
 .formBlockM{
+
+}
+
+.resultTable{
+	width: 50%;
+	margin-left: 25%;
+	margin-right: 25%;
+	border-collapse: collapse;
+	margin-bottom: 200px;
+}
+
+.fTdL{
+	width: 30%;
+}
+
+.fTdR{
+	width: 70%;
 }
