--- a/style/style.css
+++ b/style/style.css
@@ -99,6 +99,13 @@ visibility: hidden;
 	font-family: 'Noto Sans Japanese','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
 }
 
+.center{
+	padding-bottom: 1%;
+	text-align: center;
+	font-size: 18px;
+	font-family: 'Noto Sans Japanese','ヒラギノ角ゴ Pro W3','Hiragino Kaku Gothic Pro','メイリオ','Meiryo','ＭＳ Ｐゴシック',sans-serif;
+}
+
 #title{
 	margin-top: 0;
 	text-align: center;
