柏の葉ぼページを適当に錬成。joinの説明文を変更。

--- a/style/style.css
+++ b/style/style.css
@@ -858,6 +858,16 @@ table{
 	text-align: center;
 	background-color: #EEEEEE;
 	font-size: 18px;
+}
+
+.kashiwanoha{
+	width: 100%;
+	background-color: #EEEEEE;
+	border-radius: 20px;	
 
 }
 
+.iframeCenter{
+	text-align: center;
+	margin: 0 auto;
+}
