--- a/style/style.css
+++ b/style/style.css
@@ -188,41 +188,41 @@ visibility: hidden;
 }
 
 .head{
-	margin: 0;
-	font-size: 2em;
+	margin: 5% auto 0 auto;
+	font-size: 2.5em;
+	font-weight: 200;
+	background-color: rgba(220,220,220,0.7);
 }
 
 .comment{
-	margin: 0;
-	font-size: 1em;
+	font-size: 1.5em;
+	font-weight: 200;
+	background-color: rgba(220,220,220,0.7);
 }
 
 .head001{
-	margin: 1% 0;
+	width: 35%;
 }
 
 .comment001{
+	margin: 0 auto;
+	width: 60%;
 }
 
 .head002{
-	margin: 1% 0;
-	margin-top: 3%;
+	width: 65%;
 }
 
 .comment002{
 }
 
 .head003{
-	margin: 1% 0;
-	margin-top: 3%;
 }
 
 .comment003{
 }
 
 .head004{
-	margin: 1% 0;
-	margin-top: 4.5%;
 }
 
 .comment004{
