--- a/style/flexslider.css
+++ b/style/flexslider.css
@@ -40,6 +40,9 @@
 /* ====================================================================================================================
  * BASE STYLES
  * ====================================================================================================================*/
+.slides{
+}
+
 .flexslider {
   margin: 0;
   padding: 0;
