--- a/style/style.css
+++ b/style/style.css
@@ -3,10 +3,11 @@
 body{
 	font-family: 'Noto Sans Japanese';
 	font-weight: 200;
-	margin: 0;
+	margin: auto;
 	width: 100%;
 	height: 100%;
 	min-width: 1400px;
+	max-width: 1680px;
 }
 
 a{
