--- a/style/style.css
+++ b/style/style.css
@@ -253,6 +253,89 @@ visibility: hidden;
 	text-align: center;
 }
 
+table.nextDojoTable {
+    width: 500px;
+    height: 100px;
+    margin: 0 auto;
+    border-collapse: separate;
+    border-spacing: 0px 15px;
+    font-size: 12px;
+}
+ 
+table.nextDojoTable th,
+table.nextDojoTable td {
+    padding: 10px;
+}
+ 
+table.nextDojoTable th {
+    background: RGB(30, 144, 255);
+    vertical-align: middle;
+    text-align: left;
+    width: 100px;
+    overflow: visible;
+    position: relative;
+    color: #fff;
+    font-weight: normal;
+    font-size: 15px;
+}
+ 
+table.nextDojoTable th:after {
+    left: 100%;
+    top: 50%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+    border-color: rgba(136, 183, 213, 0);
+    border-left-color: RGB(30, 144, 255);
+    border-width: 10px;
+    margin-top: -10px;
+}
+
+
+/* firefox */
+@-moz-document url-prefix() {
+    table.nextDojoTable th::after {
+        float: right;
+        padding: 0;
+        left: 30px;
+        top: 10px;
+        content: " ";
+        height: 0;
+        width: 0;
+        position: relative;
+        pointer-events: none;
+        border: 10px solid transparent;
+        border-left: RGB(30, 144, 255) 10px solid;
+        margin-top: -10px;
+    }
+}
+ 
+.plainTd {
+    background: #E0E0E2;
+    width: 360px;
+    padding-left: 20px;
+    font-size: 16px;
+    text-align: left;
+}
+
+.biggerTd{
+	background: #E0E0E2;
+    width: 360px;
+    padding-left: 20px;
+	font-size: 24px;
+	text-align: center;
+}
+
+.red{
+	font-size: 18px;
+	text-align: center;
+	color: red;
+}
+
+
 /*== rtd ==*/
 
 #rtd{
