--- a/style/style.css
+++ b/style/style.css
@@ -382,7 +382,6 @@ visibility: hidden;
 	/*background-color: yellow;*/
 }
 
-
 /*== adopt ==*/
 #adopt{
 
@@ -728,19 +727,24 @@ visibility: hidden;
 
 }
 
-.newsArticle{
+.latest-newsArticle{
 	padding: 2% 0;
 	border-top: 1px solid #999;
 	border-bottom: 1px solid #999;
 }
 
-.last-newsArticle{
+.newsArticle{
 	padding: 2% 0;
 	border-bottom: 1px solid #999;
 }
 
+.newsTitle{
+	font-size: 22px;
+}
+
 .newsHead{
-	font-size: 20px;
+	font-size: 18px;
+	font-weight: 80;
 }
 /*== table ==*/
 
