メンターリストに柏の葉高校の1年生？を追加しました。 またモーダルウィンドウ内にPositionを追加しました。（要検討）

--- a/style/modal.css
+++ b/style/modal.css
@@ -28,19 +28,25 @@ a.modal-open:hover {cursor:pointer} /*カーソルをポインタに*/
 }
 
 .modal-content h1 {
+    margin: 1em 0 0 0;
     font-size:120%;
-    margin-bottom:0.5em
+}
+
+.modal-content h2 {
+    margin-top: 0;
+    font-size: 12px;
+    font-weight: unset;
 }
 
 .modal-content p {
 }
 
-a.modal-close { /*クローズボタンは何でも好きなスタイルでOK*/
+a.modal-close {
     position:absolute;
-    top:0;
-    right:10px;
-    color:#b29c33;
-    font-size:35px;
+    top: 1em;
+    right: 1em;
+    color: #b29c33;
+    font-size: 1.2em;
     line-height:1;
     font-weight:bold;
     text-decoration:none}
