--- a/style/modal.css
+++ b/style/modal.css
@@ -6,7 +6,8 @@
     left:0;
     width:100%;
     height:100vh; /*100vhでビューポートの高さいっぱいになります*/
-    background-color:rgba(0,0,0,.5)} /*これは好きな色・透明度で*/
+    background-color:rgba(0,0,0,0.5);
+} 
 
 a.modal-open:hover {cursor:pointer} /*カーソルをポインタに*/
 
@@ -45,10 +46,11 @@ a.modal-close {
     position:absolute;
     top: 1em;
     right: 1em;
-    color: #b29c33;
+    color: rgb(30,144,255);
     font-size: 1.2em;
     line-height:1;
     font-weight:bold;
-    text-decoration:none}
+    text-decoration:none;
+}
 
 a.modal-close:hover {cursor:pointer} /*カーソルをポインタに*/
