--- a/style/style.css
+++ b/style/style.css
@@ -5,8 +5,9 @@ body{
 	font-weight: 200;
 	margin: auto;
 	width: 100%;
-	min-width: 1310px;
-	max-width: 1550px;
+	min-width: 1300px;
+
+
 }
 
 a{
@@ -34,10 +35,14 @@ visibility: hidden;
 /*== MENU ==*/
 
 #menu{
+	top: 0;
 	margin: 0;
 	width: 100%;
+	height: 50px;
 	min-width: 960px;
 	background-color: #1E90FF;
+	position: fixed;
+	z-index: 999;
 }
 
 #menu ul{
@@ -105,6 +110,11 @@ visibility: hidden;
 	height: 100%;
 }
 
+#index-container{
+	margin: 0 auto;
+	width: 100%;
+}
+
 #container-plus{
 	margin-left: auto;
 	margin-right: auto;
@@ -113,7 +123,7 @@ visibility: hidden;
 }
 /*== 共通要素 ==*/
 .pageTitle{
-	margin-top: 50px;
+	margin-top:	75px;
 }
 
 .headerLogo{
@@ -175,14 +185,27 @@ visibility: hidden;
 	display: flex;
 }
 
-.subContents div{
-	margin: 0;
-	padding: 0 1%;
-	
+.inner{
+	margin: 0 2%;
+	padding: 0;
+	width: 30%;
+	border: 2px solid #999;
+	border-radius: 15px;
+}
+
+.subCon-inner{
+	text-align: center;
+
+}
+
+.subCon-inner p{
+	height: 2.5em;
+	font-size: 1.4em;
 }
 
 #sub img{
-	width: 100%;
+	margin: 0 10%;
+	width: 60%;
 }
 
 /*== about ==*/
