--- a/news/style/style.css
+++ b/news/style/style.css
@@ -1,4 +1,12 @@
-@import url(http://fonts.googleapis.com/earlyaccess/notosansjapanese.css);
+@font-face {
+   font-family: 'Noto Sans Japanese';
+   font-style: normal;
+   font-weight: 300;
+   src: url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-DemiLight.woff2) format('woff2'),
+        url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-DemiLight.woff) format('woff'),
+        url(//fonts.gstatic.com/ea/notosansjapanese/v6/NotoSansJP-DemiLight.otf) format('opentype');
+}
+
 
 body{
 	font-family: 'Noto Sans Japanese', sans-serif;
