indexにSlideについて大幅な変更を行いました。 文字は画像としてデータを持ってimgで引っ張っているので変更可能

--- a/style/style.css
+++ b/style/style.css
@@ -175,6 +175,17 @@ visibility: hidden;
 	color: black;
 }
 
+.slideInner{
+	width: 45%;
+	margin: auto;
+	top: 50px;
+	left: 0;
+	right: 0;
+	position: absolute;
+}
+.catch{
+}
+
 #sub{
 	margin: 0 auto;
 	margin-bottom: 1%;
