--- a/style/style.css
+++ b/style/style.css
@@ -418,6 +418,15 @@ table.nextDojoTable th:after {
 .movielist section{
 }
 
+.youtubelink{
+	padding-bottom: 1%;
+	text-align: center;
+}
+
+.youtubelink:hover{
+	text-decoration: underline;
+}
+
 .movieTitle{
 	font-size: 1.5em;
 	font-weight: normal;
@@ -577,7 +586,7 @@ table.nextDojoTable th:after {
 }
 
 .events h2{
-	font-size: 1.4em;
+	font-size: 1.5em;
 }
 
 .events h3{
@@ -585,7 +594,7 @@ table.nextDojoTable th:after {
 }
 
 .events h4{
-	font-size: 1.2em;
+	font-size: 1em;
 }
 
 .events h5{
