--- a/event/spd/2016/style/style.css
+++ b/event/spd/2016/style/style.css
@@ -45,19 +45,39 @@ body{
 	font-family: "HelveticaNeue-Thin", "Helvetica Neue Thin", "Helvetica Neue", ".HiraKakuInterface-W1";
 }
 
+a{
+	color: RGB(255, 39, 201);
+	text-decoration: none;
+}
+
+ul{
+	text-align:  left;
+}
+
+li{
+	text-align: left;
+}
+
+canvas{
+	position: fixed;
+}
+
 #container{
-	width: 80%;
-	margin: 0 auto;
+	position: absolute;
+	width: 70%;
+	margin-left: 15%;
+	margin-right: 15%;
+	background-color: white;
+	z-index: 100;
 }
 
 #header{
-	margin-top: 10%;
+	margin-top: 5%;
 
 }
 
 .headerImage{
-	width: 60%;
-	margin: 0 20%;
+	width: 100%;
 
 }
 
@@ -67,8 +87,56 @@ body{
   	font-weight: 100;
 }
 
+.dateText{
+	font-size: 24px;
+}
+
+.title{
+	font-size: 36px;
+	text-align: left;
+}
+
+.text{
+	font-size: 20px;
+	text-align: left;
+}
+
 #main{
 	width: 80%;
-	margin: 0 10%;
+	margin-left: 10%;
+	margin-right: 10%;
 	text-align: center;
+}
+
+.joinButton{
+	width: 80px;
+	height: 80px;
+	display: table-cell;
+	background-color: white;
+	border-style: solid;
+	border-color: pink;
+	border-radius: 40px;
+	border-width: 1px;
+	vertical-align: middle;
+	text-align: center;
+}
+
+.joinButton:hover{
+	background-color: pink;
+	color: white;
+	text-decoration: none;
+}
+
+.buttonDiv{
+	padding-top: 50px;
+	width: 10%;
+	margin: 0 auto;
+}
+
+#footer{
+	padding-top: 200px;
+}
+
+.footerText{
+	color: gray;
 }
