--- a/member/style/style.css
+++ b/member/style/style.css
@@ -9,12 +9,17 @@ body{
 
 }
 
+a{
+	color: black;
+	text-decoration: none;
+}
+
 #header{
 	background-color: #1E90FF;
 	top: 0;
 	left: 0;
 	width: 100%;
-	height: 400px;
+	height: 300px;
 	position: absolute;
 }
 
@@ -51,9 +56,69 @@ body{
 
 #main{
 	width: 80%;
-	margin: 500px 10% 0 10%;
-	height: auto;3
+	margin: 350px 10% 0 10%;
+	height: auto;
 }
+
+.dateText{
+	text-align: center;
+	font-size: 30px;
+	color: white;
+}
+
+.mainTitle{
+	font-size: 24px;
+	text-align: center;
+	line-height: 0.1em;
+}
+
+.mainText{
+	text-align: center;
+	font-size: 18px;
+}
+
+.mainImg{
+	width: 150px;
+	height: auto;
+	display: block;
+	margin: 0 auto;
+}
+
+.center{
+	text-align: center;
+	display: block;
+}
+
+#login{
+	text-align: center;
+	margin: 0 auto;
+}
+
+.textbox{
+	border:0;
+	padding:10px;
+	font-size:1.3em;
+	font-family:Arial, sans-serif;
+	color:#aaa;
+	border:solid 1px #ccc;
+	margin:0 0 20px;
+	width:300px;
+	text-align: center;
+
+}
+
+#newRegesiter{
+	text-align: center;
+	margin-top: 150px;
+	display: block;
+}
+
+#signup{
+	text-align: center;
+}
+
+
+/*
 
 #lost{
 	width: 45%;
@@ -108,29 +173,7 @@ body{
 }
 
 
-.dateText{
-	text-align: center;
-	font-size: 30px;
-	color: white;
-}
 
-.mainTitle{
-	font-size: 24px;
-	text-align: center;
-	line-height: 0.1em;
-}
-
-.mainText{
-	text-align: center;
-	font-size: 18px;
-}
-
-.mainImg{
-	width: 150px;
-	height: auto;
-	display: block;
-	margin: 0 auto;
-}
 
 .contentsLink{
 	display: block;
@@ -139,8 +182,6 @@ body{
 	text-decoration: none;
 	color: white;
 }
-
-/* lost.php */
 
 #lostTable table{
 	width: 100%;
@@ -164,8 +205,6 @@ body{
 	width: 40%;
 }
 
-/* message.php */
-
 #messageTable table{
 	width: 100%;
 	text-align: center;
@@ -188,8 +227,6 @@ body{
 	width: 20%;
 }
 
-/* file.php */
-
 #fileTable table{
 	width: 100%;
 	text-align: center;
@@ -207,4 +244,6 @@ body{
 .fileTd3{
 	width: 50%;
 }
+
+*/
 
